feat: add auth using passport.js
